
UPDATES:
v2.0.2
Fixed bug regarding releveling with a single covariate with only two levels inside formula

v2.0.1
Fixed rownames bug for imputeCens when imputeType = ‘median’
Fixed open/closed interval bug pointed out by Dr Bogaerts 
Added sampling from posterior survival curves
Added confidence intervals
Added names(fit) method

v2.0.0
Added coef active binding for regression models (i.e. fit$coef is allowed)
Fixed issue with fitting model with no regression parameters
Reorganized code files
Added Bayes models

v1.3.6
Allow for declaration of whether intervals are open or closed for 
ic_sp and ic_np
Added simulationFunctions.R
Uses Roxygen for man files

v1.3.5
Added parametric AFT models
fixed bug in plot.icenRegFit regarding xlim and ylim for semiparametric model
sped up ic_sp
added vignette

v1.3.4
fixed show() for summary class with no covariates
added ic_np for fitting NPMLE specifically (*much* faster)
switched syntax from “final_llk” to “llk” for all models
made plot() and lines() more user-friendly 
Switched to RcppEigen, rather than including static C++ library

v1.3.3 
Fixed memory access issue reported by CRAN

v1.3.2
Preparing for JSS submission
Removed unpublished algorithms and methods

v1.3.1
Imported method as reported by CRAN

v1.3.0 
getFitEsts is much faster
added predict function
added imputeCens function
added generalized gamma distribution to choice of parametric families
added imputed cross validation
added plot method for sp_curves
numerically stabilized ic_sp(model = 'ph')


v1.2.8
Resolved issue of licenses and gave proper credit to the Eigen team for 
using their code for matrix algebra
Switched to reference classes for fits, rather than lists with reassigned classes
Fixed bug with getFitEsts
Added methods for calculating the NPMLE (univariate or bivariate)
ic_par sped up, especially for models with lots of covariates