@@ -2,6 +2,8 @@
 UPDATES:
 v2.0.2
 Fixed bug regarding releveling with a single covariate with only two levels inside formula
+Internal changes to plotting
+Allowed p OR q to be supplied to survCIs
 
 v2.0.1
 Fixed rownames bug for imputeCens when imputeType = ‘median’
